crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__combinator_optional2_keyword.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(FooKeywords { Foo : "foo", });
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo {
    Foo(::css_parse::T![Ident]),
    Bar(Option<crate::Color>, Option<crate::Color>, ::css_parse::T![Ident]),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <crate::Color>::peek(p, c)
            || <::css_parse::T![Ident]>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        if let Some(keyword) = p.parse_if_peek::<FooKeywords>()? {
            use ::css_parse::Build;
            match keyword {
                FooKeywords::Foo(c) => {
                    return Ok(Self::Foo(<::css_parse::T![Ident]>::build(p, c)));
                }
            }
        }
        let combo0 = p.parse_if_peek::<crate::Color>()?;
        let combo1 = p.parse_if_peek::<crate::Color>()?;
        let combo2 = {
            let ident = p.parse::<::css_parse::T![Ident]>()?;
            let c: ::css_lexer::Cursor = ident.into();
            if !p.eq_ignore_ascii_case(c, "bar") {
                Err(
                    ::css_parse::diagnostics::UnexpectedIdent(
                        p.parse_str(c).into(),
                        c.into(),
                    ),
                )?
            }
            ident
        };
        Ok(Self::Bar(combo0, combo1, combo2))
    }
}
#[automatically_derived]
impl ::css_parse::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Foo(inner) => {
                ::css_parse::ToCursors::to_cursors(inner, s);
            }
            Self::Bar(c0, c1, c2) => {
                if let Some(inner) = c0 {
                    ::css_parse::ToCursors::to_cursors(inner, s);
                }
                if let Some(inner) = c1 {
                    ::css_parse::ToCursors::to_cursors(inner, s);
                }
                ::css_parse::ToCursors::to_cursors(c2, s);
            }
        }
    }
}
