crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__combinator_optional_all_keywords_with_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Foo :
    "foo", Bar : "bar", Baz : "baz", }
);
#[derive(Parse, Visitable)]
#[parse(one_must_occur)]
struct Foo {
    #[visit(skip)]
    #[parse(keyword = FooKeywords::Foo)]
    pub foo: Option<::css_parse::T![Ident]>,
    #[visit(skip)]
    #[parse(keyword = FooKeywords::Bar)]
    pub bar: Option<::css_parse::T![Ident]>,
    #[visit(skip)]
    #[parse(keyword = FooKeywords::Baz)]
    pub baz: Option<::css_parse::T![Ident]>,
}
