crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__combinator_optional_keywords_and_types.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(pub enum FooKeywords { Foo : "foo", });
#[derive(
    ::csskit_derives::ToSpan,
    ::csskit_derives::ToCursors,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
struct Foo {
    pub foo: Option<::css_parse::T![Ident]>,
    pub bar: Option<crate::Bar>,
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <crate::Bar>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        use ::css_parse::Build;
        let mut val = Self { foo: None, bar: None };
        while val.foo.is_none() || val.bar.is_none() {
            let c = p.peek_n(1);
            match p.parse_if_peek::<FooKeywords>()? {
                Some(FooKeywords::Foo(ident)) => {
                    if val.foo.is_some() {
                        use ::css_lexer::ToSpan;
                        Err(
                            ::css_parse::diagnostics::Unexpected(
                                ident.into(),
                                c.to_span(),
                            ),
                        )?
                    }
                    val.foo = Some(ident);
                    continue;
                }
                None => {}
            }
            if val.bar.is_none() && <crate::Bar>::peek(p, c) {
                val.bar = Some(p.parse::<crate::Bar>()?);
                continue;
            }
            break;
        }
        if val.foo.is_none() && val.bar.is_none() {
            let c: ::css_lexer::Cursor = p.parse::<::css_parse::T![Any]>()?.into();
            Err(::css_parse::diagnostics::Unexpected(c.into(), c.into()))?
        }
        Ok(val)
    }
}
