crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__custom_type_with_checks_derive_parse.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(
    #[derive(::csskit_derives::Visitable)] #[visit(skip)] pub enum FooKeywords { Foo :
    "foo", }
);
#[derive(Parse)]
enum Foo {
    #[parse(keyword = FooKeywords::Foo)]
    Foo(::css_parse::T![Ident]),
    LengthPercentage(#[parse(in_range = 0f32..)] crate::LengthPercentage),
}
