crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__enum_with_variable_count_type.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
---
::css_parse::keyword_set!(FooKeywords { Auto : "auto", });
#[derive(
    ::csskit_derives::ToCursors,
    Debug,
    Clone,
    PartialEq,
    Eq,
    PartialOrd,
    Ord,
    Hash
)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo<'a> {
    Auto(::css_parse::T![Ident]),
    AnimateableFeatures(
        ::bumpalo::collections::Vec<
            'a,
            (crate::AnimateableFeature, Option<::css_parse::T![,]>),
        >,
    ),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo<'a> {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <crate::AnimateableFeature>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo<'a> {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        if let Some(keyword) = p.parse_if_peek::<FooKeywords>()? {
            use ::css_parse::Build;
            match keyword {
                FooKeywords::Auto(c) => {
                    return Ok(Self::Auto(<::css_parse::T![Ident]>::build(p, c)));
                }
            }
        }
        let mut items = ::bumpalo::collections::Vec::new_in(p.bump());
        loop {
            let item = p.parse::<crate::AnimateableFeature>()?;
            let comma = p.parse_if_peek::<::css_parse::T![,]>()?;
            items.push((item, comma));
            if comma.is_none() {
                break;
            }
        };
        Ok(Self::AnimateableFeatures(items))
    }
}
