crates/csskit_proc_macro/src/snapshots/csskit_proc_macro__test__group_mixed_keyword_int_literal.snap
---
source: crates/csskit_proc_macro/src/test.rs
expression: pretty
snapshot_kind: text
---
::css_parse::keyword_set!(FooKeywords { Keyword : "keyword", });
#[derive(Debug, Clone, PartialEq, Eq, PartialOrd, Ord, Hash)]
#[cfg_attr(feature = "serde", derive(serde::Serialize), serde())]
enum Foo {
    Keyword(::css_parse::T![Ident]),
    Literal2(::css_parse::T![Number]),
}
#[automatically_derived]
impl<'a> ::css_parse::Peek<'a> for Foo {
    fn peek(p: &::css_parse::Parser<'a>, c: ::css_lexer::Cursor) -> bool {
        use ::css_parse::Peek;
        <::css_parse::T![Ident]>::peek(p, c) || <::css_parse::T![Number]>::peek(p, c)
    }
}
#[automatically_derived]
impl<'a> ::css_parse::Parse<'a> for Foo {
    fn parse(p: &mut ::css_parse::Parser<'a>) -> ::css_parse::Result<Self> {
        use ::css_parse::{Parse, Peek};
        if let Some(keyword) = p.parse_if_peek::<FooKeywords>()? {
            use ::css_parse::Build;
            match keyword {
                FooKeywords::Keyword(c) => {
                    return Ok(Self::Keyword(<::css_parse::T![Ident]>::build(p, c)));
                }
            }
        }
        if let Some(val) = p.parse_if_peek::<::css_parse::T![Number]>()? {
            if val.value() == (2 as f32) {
                return Ok(Self::Literal2(val));
            }
            let c = p.parse::<::css_parse::T![Number]>()?;
            Err(::css_parse::diagnostics::ExpectedInt(c.value(), c.into()))?
        }
        let c: ::css_lexer::Cursor = p.parse::<::css_parse::T![Any]>()?.into();
        Err(::css_parse::diagnostics::Unexpected(c.into(), c.into()))?
    }
}
#[automatically_derived]
impl ::css_parse::ToCursors for Foo {
    fn to_cursors(&self, s: &mut impl ::css_parse::CursorSink) {
        match self {
            Self::Keyword(inner) => {
                s.append(inner.into());
            }
            Self::Literal2(inner) => s.append(inner.into()),
        }
    }
}
